--- a/nbs/box-office.ipynb
+++ b/nbs/box-office.ipynb
@@ -4200,6 +4200,7 @@
     "    'reg_lambda' : [1.4, 1.5]\n",
     "    }\n",
     "\n",
+    "\n",
     "grid_search = GridSearchCV(lgb_model, n_jobs=-1, param_grid=gridParams, cv = 3, verbose=5)\n",
     "grid_search.fit(X_train, y_train)\n",
     "print(grid_search.best_params_)\n",
@@ -4643,7 +4644,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# We need the entire pipeline into the model. Maybe like this? https://www.kaggle.com/evanmiller/pipelines-gridsearch-awesome-ml-pipelines"
+   ]
   }
  ],
  "metadata": {
