Working on pipeline

--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -439,7 +439,37 @@
     }
    ],
    "source": [
+    "def lab_encode(df):\n",
+    "    for col in ['production_countries', 'all_genres', 'original_language']:\n",
+    "        df[col]= LabelEncoder().fit_transform(df[col])\n",
     "\n",
+    "class Preprocessor(BaseEstimator,TransformerMixin):\n",
+    "\n",
+    "    def fit(self,df,y=None):\n",
+    "            return self\n",
+    "\n",
+    "    def transform(self,df, y=None):\n",
+    "        lab_encode(df):\n",
+    "\n",
+    "        return df\n",
+    "\n",
+    "\n",
+    "# pipeline for scaling and imputing\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    (\"Rbt_scaler\", RobustScaler()),\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "])\n",
+    "\n",
+    "prepared = pipeline.fit_transform(X)\n",
+    "pretest = pipeline.transform(test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "params = {'num_leaves': 30,\n",
     "         'min_data_in_leaf': 20,\n",
     "         'objective': 'regression',\n",
@@ -455,7 +485,13 @@
     "         \"verbosity\": -1}\n",
     "\n",
     "lgb_model = lgb.LGBMRegressor(**params, n_estimators = 10000, nthread = 4, n_jobs = -1)\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
