--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -46,6 +46,7 @@
     "# This Python 3 environment comes with many helpful analytics libraries installed\n",
     "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
     "# For example, here's several helpful packages to load\n",
+    "import joblib\n",
     "\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
@@ -70,19 +71,7 @@
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "plt.style.use('fivethirtyeight')\n",
-    "\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+    "plt.style.use('fivethirtyeight')"
    ]
   },
   {
@@ -145,10 +134,9 @@
     }
    ],
    "source": [
-    "train = pd.read_csv('../input/tmdb-box-office-prediction/train.csv')\n",
-    "test = pd.read_csv('../input/tmdb-box-office-prediction/test.csv')\n",
-    "sample_submission = pd.read_csv('../input/tmdb-box-office-prediction/sample_submission.csv')\n",
-    "X = train"
+    "train = pd.read_csv('DATA/train.csv')\n",
+    "test = pd.read_csv('DATA/test.csv')\n",
+    "sample_submission = pd.read_csv('DATA/sample_submission.csv')"
    ]
   },
   {
@@ -172,43 +160,9 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "train_backup = train \n",
-    "labels = train[\"revenue\"].copy() \n",
     "X=train.drop([\"revenue\"], axis=1)\n",
-    "\n",
-    "y = np.log1p(train['revenue'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-16T15:43:16.639005Z",
-     "iopub.status.busy": "2020-11-16T15:43:16.638194Z",
-     "iopub.status.idle": "2020-11-16T15:43:16.655265Z",
-     "shell.execute_reply": "2020-11-16T15:43:16.654517Z"
-    },
-    "papermill": {
-     "duration": 0.042156,
-     "end_time": "2020-11-16T15:43:16.655415",
-     "exception": false,
-     "start_time": "2020-11-16T15:43:16.613259",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# pipeline for scaling and imputing\n",
-    "\n",
-    "pipeline1 = Pipeline([\n",
-    "    (\"Rbt_scaler\", RobustScaler()),\n",
-    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "])\n",
-    "\n",
-    "prepared = pipeline1.fit_transform(X)\n"
+    "y = np.log1p(train['revenue'])\n",
+    "\n"
    ]
   },
   {
@@ -443,25 +397,12 @@
     "    for col in ['production_countries', 'all_genres', 'original_language']:\n",
     "        df[col]= LabelEncoder().fit_transform(df[col])\n",
     "\n",
-    "class Preprocessor(BaseEstimator,TransformerMixin):\n",
-    "\n",
-    "    def fit(self,df,y=None):\n",
-    "            return self\n",
-    "\n",
-    "    def transform(self,df, y=None):\n",
-    "        lab_encode(df):\n",
-    "\n",
-    "        return df\n",
-    "\n",
-    "\n",
-    "# pipeline for scaling and imputing\n",
     "\n",
     "pipeline = Pipeline([\n",
+    "    (\"lab_encode\" , lab_encode())\n",
     "    (\"Rbt_scaler\", RobustScaler()),\n",
-    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
     "])\n",
     "\n",
-    "prepared = pipeline.fit_transform(X)\n",
     "pretest = pipeline.transform(test)\n"
    ]
   },
@@ -555,25 +496,6 @@
     }
    ],
    "source": [
-    "# Print the best parameters found\n",
-    "gridParams = {\n",
-    "    \"max_depth\": [4],\n",
-    "    \"min_data_in_leaf\": [15],\n",
-    "    'learning_rate': [0.01],\n",
-    "    'num_leaves': [40],\n",
-    "    'boosting_type' : ['gbdt'],\n",
-    "    'objective' : ['regression'],\n",
-    "    'random_state' : [501], \n",
-    "    'reg_alpha' : [1],\n",
-    "    'reg_lambda' : [1.4, 1.5]\n",
-    "    }\n",
-    "\n",
-    "grid_search = GridSearchCV(lgb_model, n_jobs=-1, param_grid=gridParams, cv = 3, verbose=5)\n",
-    "grid_search.fit(X_train, y_train)\n",
-    "print(grid_search.best_params_)\n",
-    "print(grid_search.best_score_)\n",
-    "\n",
-    "\n",
     "Random_Search_Params ={\n",
     "    \"max_depth\": [4],\n",
     "    \"min_data_in_leaf\": [15],\n",
@@ -594,11 +516,9 @@
     "    random_state=314,\n",
     "    verbose=True)\n",
     "\n",
-    "random_search.fit(X_train, y_train)\n",
-    "print('Best score reached: {} with params: {} '.format(random_search.best_score_, random_search.best_params_))\n",
+    "random_search.fit(X, y)\n",
     "\n",
     "# Using parameters already set above, replace in the best from the random search\n",
-    "\n",
     "params['learning_rate'] = random_search.best_params_['learning_rate']\n",
     "params['max_depth'] = random_search.best_params_['max_depth']\n",
     "params['num_leaves'] = random_search.best_params_['num_leaves']\n"
@@ -636,9 +556,10 @@
     }
    ],
    "source": [
-    "final_model = grid_search.best_estimator_\n",
-    "final_predict = final_model.predict(test)\n",
-    "len(final_predict)"
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n",
+    "#final_model = random_search.best_estimator_\n",
+    "#final_predict = final_model.predict(test)\n",
+    "#len(final_predict)"
    ]
   },
   {
@@ -662,10 +583,9 @@
    },
    "outputs": [],
    "source": [
-    "sample_submission = pd.read_csv('../input/tmdb-box-office-prediction/sample_submission.csv')\n",
     "# sample_submission['revenue'] = np.expm1(final_prediction + y_pred)/2\n",
-    "sample_submission['revenue'] = np.expm1(final_predict)\n",
-    "sample_submission.to_csv('final_sub.csv', index=False)"
+    "#sample_submission['revenue'] = np.expm1(final_predict)\n",
+    "#sample_submission.to_csv('final_sub.csv', index=False)"
    ]
   }
  ],
