--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -223,6 +223,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "Random_Search_Params ={\n",
+    "    \"max_depth\": [4],\n",
+    "    \"min_data_in_leaf\": [15],\n",
+    "    'learning_rate': [0.01],\n",
+    "    'num_leaves': [40],\n",
+    "    'boosting_type' : ['gbdt'],\n",
+    "    'objective' : ['regression'],\n",
+    "    'random_state' : [501], \n",
+    "    }\n",
+    "\n",
+    "n_HP_points_to_test = 50\n",
+    "\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    estimator=lgb_model, param_distributions= Random_Search_Params, \n",
+    "    n_iter=n_HP_points_to_test,\n",
+    "    cv=3,\n",
+    "    refit=True,\n",
+    "    random_state=314,\n",
+    "    verbose=True)\n",
+    "\n",
+    "random_search.fit(X, label)\n",
+    "\n",
+    "# Using parameters already set above, replace in the best from the random search\n",
+    "params['learning_rate'] = random_search.best_params_['learning_rate']\n",
+    "params['max_depth'] = random_search.best_params_['max_depth']\n",
+    "params['num_leaves'] = random_search.best_params_['num_leaves']\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "random_search.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n",
+    "#final_model = random_search.best_estimator_\n",
+    "#final_predict = final_model.predict(test)\n",
+    "#len(final_predict)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model = random_search.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "feature_values = {\n",
+    "        'belongs_to_collection': 0,\n",
+    "        'budget': 14000000,\n",
+    "        'original_language': 7,\n",
+    "        'popularity': 6.575392999999999,\n",
+    "        'production_countries': 275,\n",
+    "        'runtime': 93.0,\n",
+    "        'tagline': 0,\n",
+    "        'release_year': 2015,\n",
+    "        'release_month': 2,\n",
+    "        'budget_year_ratio': 3.448084773627077,\n",
+    "        'all_genres': 305,\n",
+    "\n",
+    "    }\n",
+    "df = pd.DataFrame(feature_values, index=[0])\n",
+    "df = pipeline.transform(df)\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pred = model.predict(df.reshape(1, -1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pred\n",
+    "# 12314651\n",
+    "# 38385767.....\n",
+    "# 21106169"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "feature_values = {\n",
+    "        'belongs_to_collection': 1,\n",
+    "        'budget': 2.266000e+07,\n",
+    "        'original_language': 7,\n",
+    "        'popularity': 8.47,\n",
+    "        'production_countries': 275,\n",
+    "        'runtime': 107.9,\n",
+    "        'tagline': 0,\n",
+    "        'release_year': 2000,\n",
+    "        'release_month': 7,\n",
+    "        'budget_year_ratio': 5.64,\n",
+    "        'all_genres': 435,\n",
+    "\n",
+    "    }\n",
+    "df = pd.DataFrame(feature_values, index=[0])\n",
+    "df = pipeline.transform(df)\n",
+    "pred = model.predict(df.reshape(1, -1))\n",
+    "pred"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {
     "execution": {
@@ -304,32 +480,9 @@
     }
    ],
    "source": [
-    "Random_Search_Params ={\n",
-    "    \"max_depth\": [4],\n",
-    "    \"min_data_in_leaf\": [15],\n",
-    "    'learning_rate': [0.01],\n",
-    "    'num_leaves': [40],\n",
-    "    'boosting_type' : ['gbdt'],\n",
-    "    'objective' : ['regression'],\n",
-    "    'random_state' : [501], \n",
-    "    }\n",
-    "\n",
-    "n_HP_points_to_test = 50\n",
-    "\n",
-    "random_search = RandomizedSearchCV(\n",
-    "    estimator=lgb_model, param_distributions= Random_Search_Params, \n",
-    "    n_iter=n_HP_points_to_test,\n",
-    "    cv=3,\n",
-    "    refit=True,\n",
-    "    random_state=314,\n",
-    "    verbose=True)\n",
-    "\n",
-    "random_search.fit(X, label)\n",
-    "\n",
-    "# Using parameters already set above, replace in the best from the random search\n",
-    "params['learning_rate'] = random_search.best_params_['learning_rate']\n",
-    "params['max_depth'] = random_search.best_params_['max_depth']\n",
-    "params['num_leaves'] = random_search.best_params_['num_leaves']\n"
+    "# sample_submission['revenue'] = np.expm1(final_prediction + y_pred)/2\n",
+    "#sample_submission['revenue'] = np.expm1(final_predict)\n",
+    "#sample_submission.to_csv('final_sub.csv', index=False)"
    ]
   },
   {
@@ -543,9 +696,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3"
   },
   "language_info": {
    "codemirror_mode": {
