Fixed title implementation

--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-11-16T15:43:16.593355Z",
@@ -110,38 +110,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        12314651\n",
-       "1        95149435\n",
-       "2        13092000\n",
-       "3        16000000\n",
-       "4         3923970\n",
+       "0       16.326300\n",
+       "1       18.370959\n",
+       "2       16.387512\n",
+       "3       16.588099\n",
+       "4       15.182615\n",
        "          ...    \n",
-       "2995      1596687\n",
-       "2996       180590\n",
-       "2997     89456761\n",
-       "2998    171963386\n",
-       "2999     82087155\n",
-       "Name: revenue, Length: 3000, dtype: int64"
+       "2995    14.283442\n",
+       "2996    12.103990\n",
+       "2997    18.309266\n",
+       "2998    18.962792\n",
+       "2999    18.223292\n",
+       "Name: revenue, Length: 3000, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "label"
+    "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        12314651.0\n",
+      "1        95149435.0\n",
+      "2        13092000.0\n",
+      "3        16000000.0\n",
+      "4         3923970.0\n",
+      "           ...     \n",
+      "2995      1596687.0\n",
+      "2996       180590.0\n",
+      "2997     89456761.0\n",
+      "2998    171963386.0\n",
+      "2999     82087155.0\n",
+      "Name: revenue, Length: 3000, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.expm1(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-11-16T15:43:16.749405Z",
@@ -170,13 +198,13 @@
     "    (\"Rbt_scaler\", RobustScaler())\n",
     "])\n",
     "prepared = pipeline.fit_transform(X)\n",
-    "pretest = pipeline.transform(test)\n",
+    "#pretest = pipeline.transform(y)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +213,7 @@
        "['../model/pipeline.joblib']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -223,8 +251,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n",
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:  3.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
+      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
+      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
+      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
+      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
+      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
+     ]
+    }
+   ],
    "source": [
     "Random_Search_Params ={\n",
     "    \"max_depth\": [4],\n",
@@ -246,129 +342,172 @@
     "    random_state=314,\n",
     "    verbose=True)\n",
     "\n",
-    "random_search.fit(X, label)\n",
+    "random_search.fit(prepared, y)\n",
     "\n",
     "# Using parameters already set above, replace in the best from the random search\n",
     "params['learning_rate'] = random_search.best_params_['learning_rate']\n",
     "params['max_depth'] = random_search.best_params_['max_depth']\n",
     "params['num_leaves'] = random_search.best_params_['num_leaves']\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LGBMRegressor(bagging_fraction=0.9, bagging_freq=1, bagging_seed=11,\n",
+       "              boosting='gbdt', feature_fraction=0.9, lambda_l1=0.2,\n",
+       "              learning_rate=0.01, max_depth=4, metric='rmse',\n",
+       "              min_data_in_leaf=15, n_estimators=10000, nthread=4, num_leaves=40,\n",
+       "              objective='regression', random_state=501, verbosity=-1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "random_search.best_estimator_"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../model/model.joblib']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n",
     "#final_model = random_search.best_estimator_\n",
     "#final_predict = final_model.predict(test)\n",
     "#len(final_predict)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "model = random_search.best_estimator_"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.        , -0.26666667,  0.        , -0.46432939, -1.        ,\n",
+       "         0.29166667,  0.        ,  0.5       ,  0.83333333, -0.27150122,\n",
+       "         0.55696203]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_values = {\n",
-    "        'belongs_to_collection': 0,\n",
-    "        'budget': 14000000,\n",
+    "        'belongs_to_collection': 1,\n",
+    "        'budget': 0,\n",
     "        'original_language': 7,\n",
-    "        'popularity': 6.575392999999999,\n",
-    "        'production_countries': 275,\n",
-    "        'runtime': 93.0,\n",
+    "        'popularity': 4.1835580000000006,\n",
+    "        'production_countries': 204,\n",
+    "        'runtime': 111.0,\n",
     "        'tagline': 0,\n",
-    "        'release_year': 2015,\n",
-    "        'release_month': 2,\n",
-    "        'budget_year_ratio': 3.448084773627077,\n",
-    "        'all_genres': 305,\n",
+    "        'release_year': 2013,\n",
+    "        'release_month': 12,\n",
+    "        'budget_year_ratio': 0,\n",
+    "        'all_genres': 480,\n",
     "\n",
     "    }\n",
     "df = pd.DataFrame(feature_values, index=[0])\n",
     "df = pipeline.transform(df)\n",
     "df"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "pred = model.predict(df.reshape(1, -1))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([93.48076141])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pred\n",
+    "np.expm1(pred)\n",
     "# 12314651\n",
     "# 38385767.....\n",
     "# 21106169"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "feature_values = {\n",
@@ -389,13 +528,7 @@
     "df = pipeline.transform(df)\n",
     "pred = model.predict(df.reshape(1, -1))\n",
     "pred"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -696,9 +829,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
+   "display_name": "Python 3",
    "language": "python",
-   "display_name": "Python 3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
