cleaned the pipe

--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -23,35 +23,19 @@
    },
    "outputs": [],
    "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
     "import joblib\n",
     "\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import matplotlib.pyplot as plt\n",
     "import lightgbm as lgb\n",
-    "import itertools\n",
-    "import ast\n",
-    "import time\n",
-    "\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn import model_selection\n",
     "\n",
     "from sklearn.preprocessing import RobustScaler, LabelEncoder\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.model_selection import train_test_split, KFold\n",
-    "from sklearn.base import BaseEstimator,TransformerMixin\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, GridSearchCV\n",
-    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "plt.style.use('fivethirtyeight')"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -105,38 +89,7 @@
    "source": [
     "X = train.drop([\"revenue\"], axis=1)\n",
     "label = train[\"revenue\"].copy()\n",
-    "y = np.log1p(train['revenue'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       16.326300\n",
-       "1       18.370959\n",
-       "2       16.387512\n",
-       "3       16.588099\n",
-       "4       15.182615\n",
-       "          ...    \n",
-       "2995    14.283442\n",
-       "2996    12.103990\n",
-       "2997    18.309266\n",
-       "2998    18.962792\n",
-       "2999    18.223292\n",
-       "Name: revenue, Length: 3000, dtype: float64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
+    "y = np.log1p(train['revenue'])\n"
    ]
   },
   {
@@ -188,17 +141,12 @@
    },
    "outputs": [],
    "source": [
-    "def lab_encode(df):\n",
-    "    for col in ['production_countries', 'all_genres', 'original_language']:\n",
-    "        df[col]= LabelEncoder().fit_transform(df[col])\n",
-    "\n",
-    "\n",
     "pipeline = Pipeline([\n",
-    "    #(\"lab_encode\" , lab_encode(X)),\n",
     "    (\"Rbt_scaler\", RobustScaler())\n",
     "])\n",
+    "\n",
     "prepared = pipeline.fit_transform(X)\n",
-    "#pretest = pipeline.transform(y)\n",
+    "\n",
     "\n"
    ]
   },
@@ -399,10 +347,7 @@
     }
    ],
    "source": [
-    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n",
-    "#final_model = random_search.best_estimator_\n",
-    "#final_predict = final_model.predict(test)\n",
-    "#len(final_predict)"
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n"
    ]
   },
   {
@@ -494,10 +439,7 @@
     }
    ],
    "source": [
-    "np.expm1(pred)\n",
-    "# 12314651\n",
-    "# 38385767.....\n",
-    "# 21106169"
+    "np.expm1(pred)"
    ]
   },
   {
@@ -527,95 +469,7 @@
     "df = pd.DataFrame(feature_values, index=[0])\n",
     "df = pipeline.transform(df)\n",
     "pred = model.predict(df.reshape(1, -1))\n",
-    "pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-16T15:43:17.233893Z",
-     "iopub.status.busy": "2020-11-16T15:43:17.233036Z",
-     "iopub.status.idle": "2020-11-16T15:44:04.189481Z",
-     "shell.execute_reply": "2020-11-16T15:44:04.190422Z"
-    },
-    "papermill": {
-     "duration": 46.996848,
-     "end_time": "2020-11-16T15:44:04.190619",
-     "exception": false,
-     "start_time": "2020-11-16T15:43:17.193771",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 1 candidates, totalling 3 fits\n",
-      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
-      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
-      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
-      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
-      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
-      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
-      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
-      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
-      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
-      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
-      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
-      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
-      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n",
-      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
-      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
-      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
-      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
-      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
-      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
-      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:  2.2min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Warning] num_threads is set with n_jobs=-1, nthread=4 will be ignored. Current value: num_threads=-1\n",
-      "[LightGBM] [Warning] boosting is set=gbdt, boosting_type=gbdt will be ignored. Current value: boosting=gbdt\n",
-      "[LightGBM] [Warning] feature_fraction is set=0.9, colsample_bytree=1.0 will be ignored. Current value: feature_fraction=0.9\n",
-      "[LightGBM] [Warning] min_data_in_leaf is set=15, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=15\n",
-      "[LightGBM] [Warning] lambda_l1 is set=0.2, reg_alpha=0.0 will be ignored. Current value: lambda_l1=0.2\n",
-      "[LightGBM] [Warning] bagging_fraction is set=0.9, subsample=1.0 will be ignored. Current value: bagging_fraction=0.9\n",
-      "[LightGBM] [Warning] bagging_freq is set=1, subsample_freq=0 will be ignored. Current value: bagging_freq=1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# sample_submission['revenue'] = np.expm1(final_prediction + y_pred)/2\n",
-    "#sample_submission['revenue'] = np.expm1(final_predict)\n",
-    "#sample_submission.to_csv('final_sub.csv', index=False)"
+    "pred\n"
    ]
   },
   {
@@ -663,10 +517,7 @@
     }
    ],
    "source": [
-    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)\n",
-    "#final_model = random_search.best_estimator_\n",
-    "#final_predict = final_model.predict(test)\n",
-    "#len(final_predict)"
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)"
    ]
   },
   {
@@ -757,16 +608,17 @@
     }
    ],
    "source": [
-    "pred\n",
-    "# 12314651\n",
-    "# 38385767.....\n",
-    "# 21106169"
+    "pred\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -798,32 +650,6 @@
     "df = pipeline.transform(df)\n",
     "pred = model.predict(df.reshape(1, -1))\n",
     "pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-11-16T15:44:05.373509Z",
-     "iopub.status.busy": "2020-11-16T15:44:05.372511Z",
-     "iopub.status.idle": "2020-11-16T15:44:05.587973Z",
-     "shell.execute_reply": "2020-11-16T15:44:05.587277Z"
-    },
-    "papermill": {
-     "duration": 0.252683,
-     "end_time": "2020-11-16T15:44:05.588100",
-     "exception": false,
-     "start_time": "2020-11-16T15:44:05.335417",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# sample_submission['revenue'] = np.expm1(final_prediction + y_pred)/2\n",
-    "#sample_submission['revenue'] = np.expm1(final_predict)\n",
-    "#sample_submission.to_csv('final_sub.csv', index=False)"
    ]
   }
  ],
