--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -23,17 +23,17 @@
    },
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "import joblib\n",
     "\n",
     "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import lightgbm as lgb\n",
-    "\n",
-    "from sklearn.preprocessing import RobustScaler, LabelEncoder\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
-    "\n",
+    "import pandas as pd # data processing/analys\n",
+    "import lightgbm as lgb # gradient boosting framework that uses tree based learning algorithms\n",
     "import warnings\n",
+    "\n",
+    "from sklearn.preprocessing import RobustScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -61,6 +61,7 @@
    },
    "outputs": [],
    "source": [
+    "#Using Pandas to load/read train, test and sample_sub set\n",
     "train = pd.read_csv('DATA/train.csv')\n",
     "test = pd.read_csv('DATA/test.csv')\n",
     "sample_submission = pd.read_csv('DATA/sample_submission.csv')"
@@ -87,37 +88,12 @@
    },
    "outputs": [],
    "source": [
+    "# Droping the lable(\"revenue\") before Scaling.\n",
     "X = train.drop([\"revenue\"], axis=1)\n",
-    "label = train[\"revenue\"].copy()\n",
-    "y = np.log1p(train['revenue'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        12314651.0\n",
-      "1        95149435.0\n",
-      "2        13092000.0\n",
-      "3        16000000.0\n",
-      "4         3923970.0\n",
-      "           ...     \n",
-      "2995      1596687.0\n",
-      "2996       180590.0\n",
-      "2997     89456761.0\n",
-      "2998    171963386.0\n",
-      "2999     82087155.0\n",
-      "Name: revenue, Length: 3000, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.expm1(y))"
+    "#Saving label as y, using numpy log1p on label(logarithmic element-wise) to get better score.\n",
+    "y = np.log1p(train['revenue'])\n",
+    "\n",
+    "print(np.expm1(y))\n"
    ]
   },
   {
