--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -93,7 +93,8 @@
     "#Saving label as y, using numpy log1p on label(logarithmic element-wise) to get better score.\n",
     "y = np.log1p(train['revenue'])\n",
     "\n",
-    "print(np.expm1(y))\n"
+    "# This is how we transform back again(necessary after predict to get the right score)\n",
+    "print(np.expm1(y))"
    ]
   },
   {
@@ -117,13 +118,12 @@
    },
    "outputs": [],
    "source": [
+    "# A very light weight pipeline with Robust Scaler, which takes care of outliers\n",
     "pipeline = Pipeline([\n",
     "    (\"Rbt_scaler\", RobustScaler())\n",
     "])\n",
     "\n",
-    "prepared = pipeline.fit_transform(X)\n",
-    "\n",
-    "\n"
+    "prepared = pipeline.fit_transform(X)\n"
    ]
   },
   {
