preProcessing with comments added

--- a/nbs/box-office-pipline.ipynb
+++ b/nbs/box-office-pipline.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Importing libraries"
    ]
@@ -46,7 +50,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Using Pandas to load/read train, test and sample_sub set"
    ]
@@ -81,7 +89,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Droping the lable(\"revenue\") before Scaling.\n",
     "\n",
@@ -117,7 +129,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "A very light weight pipeline with Robust Scaler, which takes care of outliers"
    ]
@@ -173,12 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "params = {'num_leaves': 30,\n",
@@ -196,6 +207,92 @@
     "         \"verbosity\": -1}\n",
     "\n",
     "lgb_model = lgb.LGBMRegressor(**params, n_estimators = 10000, nthread = 4, n_jobs = -1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "Random_Search_Params ={\n",
+    "    \"max_depth\": [4],\n",
+    "    \"min_data_in_leaf\": [15],\n",
+    "    'learning_rate': [0.01],\n",
+    "    'num_leaves': [40],\n",
+    "    'boosting_type' : ['gbdt'],\n",
+    "    'objective' : ['regression'],\n",
+    "    'random_state' : [501], \n",
+    "    }\n",
+    "\n",
+    "n_HP_points_to_test = 50\n",
+    "\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    estimator=lgb_model, param_distributions= Random_Search_Params, \n",
+    "    n_iter=n_HP_points_to_test,\n",
+    "    cv=3,\n",
+    "    refit=True,\n",
+    "    random_state=314,\n",
+    "    verbose=True)\n",
+    "\n",
+    "random_search.fit(prepared, y)\n",
+    "\n",
+    "# Using parameters already set above, replace in the best from the random search\n",
+    "params['learning_rate'] = random_search.best_params_['learning_rate']\n",
+    "params['max_depth'] = random_search.best_params_['max_depth']\n",
+    "params['num_leaves'] = random_search.best_params_['num_leaves']\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "random_search.best_estimator_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "joblib.dump(random_search.best_estimator_, \"../model/model.joblib\", compress = 1)"
    ]
   },
   {
